--- a/modules/3-S/day2.tex
+++ b/modules/3-S/day2.tex
@@ -45,49 +45,48 @@
 
 \begin{activity}{15}
   Which of the following sets are bases for \(\IR^4\)?
-  \begin{multicols}{3}\small
-  \begin{enumerate}[a)]
-    \item \(\left\{
+    \begin{tabular}{cc}
+	\(\left\{
     \begin{bmatrix}1\\0\\0\\0\end{bmatrix},
     \begin{bmatrix}0\\1\\0\\0\end{bmatrix},
     \begin{bmatrix}0\\0\\1\\0\end{bmatrix},
     \begin{bmatrix}0\\0\\0\\1\end{bmatrix}
     \right\}
-    \)
+    \)   & 
 
-    \item \(\left\{
+  \(\left\{
     \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
     \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
     \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
     \begin{bmatrix}-3\\0\\1\\3\end{bmatrix}
     \right\}
-    \)
+    \)  \\ 
 
-    \item \(\left\{
-    \begin{bmatrix}5\\3\\0\\-1\end{bmatrix},
-    \begin{bmatrix}-2\\1\\0\\3\end{bmatrix},
-    \begin{bmatrix}4\\5\\1\\3\end{bmatrix}
-    \right\}
-    \)
 
-    \item \(\left\{
+    \(\left\{
     \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
     \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
     \begin{bmatrix}3\\13\\7\\16\end{bmatrix},
     \begin{bmatrix}-1\\10\\7\\14\end{bmatrix},
     \begin{bmatrix}4\\3\\0\\2\end{bmatrix}
     \right\}
-    \)
+    \) &
 
-    \item \(\left\{
+	\(\left\{
     \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
     \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
     \begin{bmatrix}-3\\0\\1\\3\end{bmatrix},
     \begin{bmatrix}3\\6\\1\\5\end{bmatrix}
     \right\}
-    \)
-  \end{enumerate}
-  \end{multicols}
+    \) \\
+
+   \(\left\{
+    \begin{bmatrix}5\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}-2\\1\\0\\3\end{bmatrix},
+    \begin{bmatrix}4\\5\\1\\3\end{bmatrix}
+    \right\}
+    \)  &
+  \end{tabular}
 \end{activity}
 
 \begin{activity}{10}
