Finish time estimates for module M, addresses #29

--- a/modules/4-A/day3.tex
+++ b/modules/4-A/day3.tex
@@ -2,7 +2,7 @@
 % ^ leave for LaTeXTools build functionality
 
 \begin{applicationActivities}{3}{19}
-\begin{activity}{10}
+\begin{activity}{15}
   \begin{subactivity}
     Describe surjective linear transformations in terms of the image.
   \end{subactivity}
@@ -33,8 +33,8 @@ Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (fo
 \end{TBLnote}
 \end{activity}
 
-\begin{activity}{25}
-\begin{TBLnote}Gallery walk --3 minutes per board.  Then 10 minutes to wrap up discussion \end{TBLnote}
+\begin{activity}{20}
+\begin{TBLnote}Gallery walk --3 minutes per board at 3 different boards.  Then 10 minutes to wrap up discussion \end{TBLnote}
 Cycle around the room counter-clockwise.  If they have two things grouped together that you know are not equivalent, write a reason or counter-example on a sticky note.
 \end{activity}
 
