--- a/modules/5-M/day3.tex
+++ b/modules/5-M/day3.tex
@@ -3,24 +3,34 @@
 
 \begin{applicationActivities}{3}{23}
 
-\begin{activity}{0}
+\begin{definition}
   Let $T: \IR^n \rightarrow \IR^n$ be a linear map with matrix $A \in M_{n,n}$.
 
-  If $T$ is a bijection, then $AX=B$ has a unique solution for all $B \in \IR^n$.  Thus we can define a map $T^{-1} : \IR^n \rightarrow \IR^n$ by defining $T^{-1}(B)$ to be this solution.  It follows immediately that $T \circ T^{-1}$ is the identity map.  The matrix corresponding to $T^{-1}$ is denoted $A^{-1}$.
+  If $T$ is a bijection, then $AX=B$ has a unique solution for all $B \in \IR^n$.  Thus we can define a map $T^{-1} : \IR^n \rightarrow \IR^n$ by defining $T^{-1}(B)$ to be this solution.  It follows immediately that $T \circ T^{-1}$ is the identity map.  The matrix corresponding to $T^{-1}$ is denoted $A^{-1}$, and $A$ is called an {\bf invertible matrix}.
 
-  \begin{enumerate}[1)]
-  \item Solve $AX=\vec{e}_1$ to determine $T^{-1}(\vec{e}_1)$
-  \item Solve $AX=\vec{e}_1$ to determine $T^{-1}(\vec{e}_2)$
-  \item Solve $AX=\vec{e}_1$ to determine $T^{-1}(\vec{e}_3)$
-  \item Compute $A^{-1}$
-  \end{enumerate}
+\end{definition}
+\begin{activity}{20}
+Let $T: \IR^3 \rightarrow \IR^3$ be given by the matrix $A=\begin{bmatrix} 1 & -2 & 1 \\ -3 & 7 & 6 \\ 2 & -3 & 0 \end{bmatrix}$.
+  \begin{subactivity}
+  Solve $AX=\vec{e}_1$ to determine $T^{-1}(\vec{e}_1)$
+  \end{subactivity}
+  \begin{subactivity}
+   Solve $AX=\vec{e}_2$ to determine $T^{-1}(\vec{e}_2)$
+  \end{subactivity}
+  \begin{subactivity}
+   Solve $AX=\vec{e}_2$ to determine $T^{-1}(\vec{e}_3)$
+  \end{subactivity}
+  \begin{subactivity}
+  Compute $A^{-1}$
+  \end{subactivity}
+\end{activity}
 
-  A (square) matrix is called {\em invertible} if it corresponds to an invertible linear transformation.
+\begin{activity}{15}
+  Find the inverse of the matrix $\begin{bmatrix} 1 & 3 \\ 0 & -2 \end{bmatrix}$
+\end{activity}
 
-  \begin{enumerate}[1)]
-  \item Find the inverse of the matrix $\begin{bmatrix} 1 & 3 \\ 0 & -2 \end{bmatrix}$
-  \item Find the inverse of the matrix $\begin{bmatrix} 1 & -2 & 1 \\ -3 & 7 & 6 \\ 2 & -3 & 0 \end{bmatrix}$
-  \end{enumerate}
+\begin{activity}{15}
+Determine if the matrix $\begin{bmatrix} 2 & 3 & 1 \\ -1 & -4 & 2 \\ 0 & -5 & 5 \end{bmatrix}$ is invertible or not.
 \end{activity}
 
 \end{applicationActivities}
