--- a/modules/4-A/day1.tex
+++ b/modules/4-A/day1.tex
@@ -37,6 +37,13 @@ Suppose $T: \IR^3 \rightarrow \IR^2$ is a linear transformation, and you know $T
 
 \begin{activity}{5}
 Suppose $T: \IR^4 \rightarrow \IR^3$ is a linear transformation.  What is the smallest number of vectors needed to determine $T$?  In other words, what is the smallest number $n$ such that there are $\vec{v}_1,\ldots,\vec{v}_n \in \IR^4$ and given  $T(\vec{v}_1), \ldots, T(\vec{v}_n)$ you can determine $T(\vec{w})$ for \textit{any} $\vec{w} \in \IR^2$?
+\begin{enumerate}[(a)]
+\item $2$
+\item $3$
+\item $4$
+\item $5$
+\item You need infinitely many
+\end{enumerate}
 \end{activity}
 
 \begin{observation}
@@ -55,14 +62,9 @@ Then the matrix corresponding to $T$ with respect to the standard bases is $$\be
 \end{example}
 
 \begin{activity}{10}
-  Let $T: \IR^3 \rightarrow \IR^2$ be a linear transformation with
-\begin{align*}
-T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} 3 \\ 2\end{bmatrix} &
-T\left(\begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} -1 \\ 4\end{bmatrix} &
-T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right) &= \begin{bmatrix} 5 \\ 0\end{bmatrix}
-\end{align*}
-Write the matrix corresponding to this linear transformation with respect to the ordered basis
-\[\left\{ \begin{bmatrix} 2 \\ 1 \\ 1 \end{bmatrix} , \begin{bmatrix} -1 \\ -1 \\ 3 \end{bmatrix} , \begin{bmatrix} 0 \\ 1 \\ 2 \end{bmatrix} \right\}\] for $\IR^3$ and the standard basis for $\IR^2$.
+  Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by
+$$T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x+3z \\ 2x-y-4z \end{bmatrix}$$
+Write the matrix corresponding to this linear transformation with respect to standard basis.
 \end{activity}
 
 \begin{activity}{5}
