--- a/modules/4-A/day2.tex
+++ b/modules/4-A/day2.tex
@@ -11,7 +11,7 @@ Let $T: V \rightarrow W$ be a linear transformation.
 \end{itemize}
 \end{definition}
 
-\begin{activity}{5}
+\begin{activity}{10}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Determine if $T$ is injective, surjective, both, or neither.
 \end{activity}
 
@@ -27,7 +27,7 @@ We also have two important sets called the \term{kernel} of $T$ and the \term{im
 \end{align*}
 \end{definition}
 
-\begin{activity}{5}
+\begin{activity}{10}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel and image of $T$.
 \end{activity}
 
@@ -47,15 +47,15 @@ Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matri
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{5}
-Let $S: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matrix $B=\begin{bmatrix} 3 & 4 & 1 \\ 1 & 2 & 4 \\ 5 & 8 & 9 \end{bmatrix}$ (for the standard basis).
-\begin{enumerate}[1)]
-\item Write a system of equations whose solution set is the kernel.
-\item Compute $\RREF(A)$ and solve the system of equations.
-\item Compute the kernel of $T$
-\item Find a basis for the kernel of $T$
-\end{enumerate}
-\end{activity}
+%\begin{activity}{5}
+%Let $S: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matrix $B=\begin{bmatrix} 3 & 4 & 1 \\ 1 & 2 & 4 \\ 5 & 8 & 9 \end{bmatrix}$ (for the standard basis).
+%\begin{enumerate}[1)]
+%\item Write a system of equations whose solution set is the kernel.
+%\item Compute $\RREF(A)$ and solve the system of equations.
+%\item Compute the kernel of $T$
+%\item Find a basis for the kernel of $T$
+%\end{enumerate}
+%\end{activity}
 
 \begin{activity}{10}
 Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$ (for the standard basis).
@@ -65,12 +65,12 @@ Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the matri
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{5}
-Let $S: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the matrix $B=\begin{bmatrix} 3 & 4 & 1 \\ 1 & 2 & 4 \\ 5 & 8 & 9  \end{bmatrix}$ (for the standard basis).
-\begin{enumerate}[1)]
-\item Find a set of vectors that span the image of $T$
-\item Find a basis for the image of $T$.
-\end{enumerate}
-\end{activity}
+%\begin{activity}{5}
+%Let $S: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the matrix $B=\begin{bmatrix} 3 & 4 & 1 \\ 1 & 2 & 4 \\ 5 & 8 & 9  \end{bmatrix}$ (for the standard basis).
+%\begin{enumerate}[1)]
+%\item Find a set of vectors that span the image of $T$
+%\item Find a basis for the image of $T$.
+%\end{enumerate}
+%\end{activity}
 
 \end{applicationActivities}
