--- a/modules/5-M/day1.tex
+++ b/modules/5-M/day1.tex
@@ -3,7 +3,7 @@
 
 \begin{applicationActivities}{1}{21}
 
-\begin{activity}{3}
+\begin{activity}{5}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
 What is the domain of the composition map $S \circ T$?
@@ -27,7 +27,7 @@ What is the codomain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{4}
+\begin{activity}{3}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
@@ -41,7 +41,7 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{5}
+\begin{activity}{9}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
 Compute $(S \circ T)(\vec{e}_1)$, $(S \circ T)(\vec{e}_2)$, and
@@ -54,7 +54,7 @@ Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1
 Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
 \end{activity}
 
-\begin{activity}{2}
+\begin{activity}{3}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
 What is the domain of the composition map $S \circ T$?
@@ -66,7 +66,7 @@ What is the domain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{2}
+\begin{activity}{3}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
 What is the codomain of the composition map $S \circ T$?
@@ -78,7 +78,7 @@ What is the codomain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{2}
+\begin{activity}{3}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
@@ -96,23 +96,23 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 %Compute $(S \circ T)(\vec{e}_1)$ and $(S \circ T)(\vec{e}_2)$
 %\end{activity}
 
-\begin{activity}{5}
+\begin{activity}{10}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
 Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
 \end{activity}
 
-\begin{activity}{2}
-Let $T: \IR^1 \rightarrow \IR^4$ be given by the matrix $B=\begin{bmatrix} 3 \\\ -2 \\ 1 \\ -1\end{bmatrix}$ and $S: \IR^4 \rightarrow \IR^1$ be given by the matrix $A=\begin{bmatrix}2 & 3 & 2 & 5 \end{bmatrix}$.
-
-The matrix corresponding to $S \circ T$ will lie in which matrix space?
-\begin{enumerate}[(a)]
-\item $M_{1,1}$
-\item $M_{1,4}$
-\item $M_{4,1}$
-\item $M_{4,4}$
-\end{enumerate}
-\end{activity}
+%\begin{activity}{2}
+%Let $T: \IR^1 \rightarrow \IR^4$ be given by the matrix $B=\begin{bmatrix} 3 \\\ -2 \\ 1 \\ -1\end{bmatrix}$ and $S: \IR^4 \rightarrow \IR^1$ be given by the matrix $A=\begin{bmatrix}2 & 3 & 2 & 5 \end{bmatrix}$.
+%
+%The matrix corresponding to $S \circ T$ will lie in which matrix space?
+%\begin{enumerate}[(a)]
+%\item $M_{1,1}$
+%\item $M_{1,4}$
+%\item $M_{4,1}$
+%\item $M_{4,4}$
+%\end{enumerate}
+%\end{activity}
 
 \begin{activity}{5}
 Let $T: \IR^1 \rightarrow \IR^4$ be given by the matrix $B=\begin{bmatrix} 3 \\\ -2 \\ 1 \\ -1\end{bmatrix}$ and $S: \IR^4 \rightarrow \IR^1$ be given by the matrix $A=\begin{bmatrix}2 & 3 & 2 & 5 \end{bmatrix}$.
