Finish time estimates for module G, closes #29

--- a/modules/6-G/day3.tex
+++ b/modules/6-G/day3.tex
@@ -3,7 +3,7 @@
 
 \begin{applicationActivities}{3}{27}
 
-\begin{activity}{0}
+\begin{activity}{15}
 Consider the linear transformation $A : \IR^2 \rightarrow \IR^2$ given by the matrix $A = \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}$
 
 \begin{center}
@@ -32,15 +32,18 @@ Observe that $A\vec{x}=\lambda \vec{x}$ is equivalent to $(A-\lambda I)\vec{x} =
 \end{itemize}
 \end{observation}
 
-\begin{activity}{0}
-Find the eigenvalues for the matrix $A = \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}$.
+\begin{activity}{20}
+Let $A = \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}$.
+\begin{subactivity}
+Find the eigenvalues of $A$.
+\end{subactivity}
+\begin{subactivity}
+Find the eigenspace associated to the eigenvalue $3$.
+\end{subactivity}
 \end{activity}
 
-\begin{activity}{0}
-  Compute the eigenspace associated to the eigenvalue $3$.
-\end{activity}
 
-\begin{activity}{0}
+\begin{activity}{15}
   Find all the eigenvalues and associated eigenspaces for the matrix $\begin{bmatrix} 6 & -2 & 1 \\ 17 & -5 & 5 \\ -4 & 2 & 1 \end{bmatrix}$.
 \end{activity}
 
