--- a/modules/6-G/day4.tex
+++ b/modules/6-G/day4.tex
@@ -3,11 +3,18 @@
 
 \begin{applicationActivities}{4}{28}
 
-\begin{activity}{0}
+\begin{activity}{5}
   If $A \in M_4$, what is the largest number of eigenvalues $A$ can have?
+  \begin{enumerate}[(a)]
+  \item $3$
+  \item $4$
+  \item $5$
+  \item $6$
+  \item It can have infinitely many
+  \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{10}
   $2$ is an eigenvalue of each of the matrices $A=\begin{bmatrix} 1 & -2 & 1 \\ -1 & 0 & 1 \\ -1 & -2 & 3\end{bmatrix}$ and $B=\begin{bmatrix} -3 & -9 & 5 \\ -2 & -2 & 2 \\ -7 & -13 & 9 \end{bmatrix}$.
 
   Compute the eigenspace associated to $2$ for both $A$ and $B$.
@@ -22,7 +29,7 @@
 
 \end{definition}
 
-\begin{activity}{0} How are the algebraic and geometric multiplicities related?
+\begin{activity}{10} How are the algebraic and geometric multiplicities related?
 \begin{enumerate}[(a)]
 \item The algebraic multiplicity is always at least as big as than the geometric multiplicity.
 \item The geometric multiplicity is always at least as big as the algebraic multiplicity.
@@ -30,36 +37,20 @@
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{0}
+\begin{activity}{15}
    Find the eigenvalues, along with both their algebraic and geometric multiplicities, for the matrix $\begin{bmatrix} -3 & 1 & 2 & 1 \\ -9 & 5 & -2 & -1 \\ 31 & -17 & 6 & 3 \\ -69 & 39 & -18 & -9 \end{bmatrix}$
 \end{activity}
 
-\begin{activity}{0}
-  Find the eigenvalues of the matrix $A=\begin{bmatrix}0 & -1 \\ 1 & 0 \end{bmatrix}$
-\end{activity}
-
-\begin{activity}{0}
+\begin{activity}{10}
+Let  $A=\begin{bmatrix}0 & -1 \\ 1 & 0 \end{bmatrix}$.
+\begin{subactivity}
+  Find the eigenvalues of $A$
+  \end{subactivity}
+  \begin{subactivity}
    Describe what this linear transformation is doing geometrically; draw a picture.
+   \end{subactivity}
 \end{activity}
 
-\begin{activity}{0}
-   Fix a real number $\theta$ and find the eigenvalues of the matrix $A_{\theta} = \begin{bmatrix} \cos(\theta) & -\sin(\theta) \\ \sin(\theta) & \cos (\theta) \end{bmatrix}$.  What are the eigenvalues?
-\end{activity}
 
-\begin{activity}{0} D
-  raw pictures and describe the geometric actions of the maps $A_{\frac{\pi}{4
-  }}$, $A_{\frac{\pi}{2}}$, and $A_{\pi}$.
-\end{activity}
-
-\begin{activity}{0}
-  For how many values of $\theta$ does the rotation matrix $A_\theta$ have real eigenvalues?
-\begin{enumerate}[(a)]
-\item $0$
-\item $1$
-\item $2$
-\item $3$
-\item An infinite number
-\end{enumerate}
-\end{activity}
 
 \end{applicationActivities}
