--- a/assessments/problems/S2.tex
+++ b/assessments/problems/S2.tex
@@ -1,5 +1,5 @@
 \begin{problem}{S2}
-Determine if the set $\left\{\begin{bmatrix} 1 \\ 1 \\ -1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 1 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ -2 \end{bmatrix}\right\}$ is a basis of $\IR^3$
+Determine if the set $\left\{\begin{bmatrix} 1 \\ 1 \\ -1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 1 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ -2 \end{bmatrix}\right\}$ is a basis of $\IR^3$.
 \end{problem}
 \begin{solution}
 $$\RREF\left(\begin{bmatrix} 1 & 3 & 2 \\ 1 & -1 & 0 \\ -1 & 1 & -2 \end{bmatrix} \right)= \begin{bmatrix} 1 & 0 &0 \\ 0 & 1 & 0 \\ 0 & 0 & 1\end{bmatrix}$$
@@ -8,7 +8,7 @@ Since the resulting matrix is the identity matrix, it is a basis.
 
 
 \begin{problem}{S2}
-Determine if the set $\left\{ x^2+x-1, 3x^2-x+1, 2x-2 \right\}$ is a basis of $\P_2$
+Determine if the set $\left\{ x^2+x-1, 3x^2-x+1, 2x^2-2 \right\}$ is a basis of $\P^2$.
 \end{problem}
 \begin{solution}
 $$\RREF\left(\begin{bmatrix} 1 & 3 & 2 \\ 1 & -1 & 0 \\ -1 & 1 & -2 \end{bmatrix} \right)= \begin{bmatrix} 1 & 0 &0 \\ 0 & 1 & 0 \\ 0 & 0 & 1\end{bmatrix}$$
@@ -17,7 +17,7 @@ Since the resulting matrix is the identity matrix, it is a basis.
 
 
 \begin{problem}{S2}
-Determine if the set $\left\{ x^3-x, x^2+x+1, x^3-x^2+2, 2x^2-1 \right\}$ is a basis of $\P_3$
+Determine if the set $\left\{ x^3-x, x^2+x+1, x^3-x^2+2, 2x^2-1 \right\}$ is a basis of $\P^3$.
 \end{problem}
 \begin{solution}
 $$\RREF\left(\begin{bmatrix} 1 & 0 & 1 & 0 \\ 0 & 1 & -1 & 2 \\ -1 & 1 & 0 & 0 \\ 0 & 1 & 2 & -1 \end{bmatrix} \right)= \begin{bmatrix} 1 & 0 &0 & 1 \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & -1 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
@@ -31,4 +31,103 @@ Determine if the set $\left\{ \begin{bmatrix} 0 \\ 1 \\ 1 \\ 1 \end{bmatrix}, \b
 \begin{solution}
 $$\RREF\left(\begin{bmatrix} 0 & 1 & 1 & 0 \\ 1 & -1 & 0 & 2   \\ 1 & 0 & -1 & 0  \\ 1 & 2 & 0 & -1  \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 & 1  \\ 0 & 1 & 0 & -1  \\ 0 & 0 & 1 & 1  \\ 0 & 0 & 0 & 0 \end{bmatrix} $$
 Since this is not the identity matrix, the set is not a basis.
+\end{solution}
+
+
+
+
+
+
+\begin{problem}{S2}
+  Determine if the set \(\left\{
+    \begin{bmatrix} 3 \\ -1 \\ 2 \end{bmatrix},
+    \begin{bmatrix} 2 \\ 0 \\ 2 \end{bmatrix},
+    \begin{bmatrix} 1 \\ 4 \\ -1 \end{bmatrix}
+  \right\}\) is a basis of $\IR^3$.
+\end{problem}
+\begin{solution}
+  \[\RREF\left(
+    \begin{bmatrix}
+      3 & 2 & 1 \\
+      -1 & 0 & 4 \\
+      2 & 2 & -1
+    \end{bmatrix} \right)= \begin{bmatrix}
+      1 & 0 &0 \\
+      0 & 1 & 0 \\
+      0 & 0 & 1
+    \end{bmatrix}
+  \]
+Since the resulting matrix is the identity matrix, it is a basis.
+\end{solution}
+
+
+\begin{problem}{S2}
+  Determine if the set $\left\{ 2x^2-x+3, 2x^2+2, -x^2+4x+1 \right\}$
+  is a basis of $\P^2$.
+\end{problem}
+\begin{solution}
+  \[\RREF\left(
+    \begin{bmatrix}
+      2 & 2 & -1 \\
+      -1 & 0 & 4 \\
+      3 & 2 & 1
+    \end{bmatrix} \right)= \begin{bmatrix}
+      1 & 0 &0 \\
+      0 & 1 & 0 \\
+      0 & 0 & 1
+    \end{bmatrix}
+  \]
+Since the resulting matrix is the identity matrix, it is a basis.
+\end{solution}
+
+
+\begin{problem}{S2}
+  Determine if the set \(\left\{
+    \begin{bmatrix} 3 \\ -1 \\ 2 \\3 \end{bmatrix},
+    \begin{bmatrix} 2 \\ 0 \\ 2 \\ 4\end{bmatrix},
+    \begin{bmatrix} 1 \\ -1 \\ 0 \\ -1\end{bmatrix},
+    \begin{bmatrix} -1 \\ 3 \\ 0 \\ 5\end{bmatrix}
+  \right\}\) is a basis of $\IR^4$.
+\end{problem}
+\begin{solution}
+  \[\RREF\left(
+    \begin{bmatrix}
+      3 & 2 & 1 & -1\\
+      -1 & 0 & -1 & 3\\
+      2 & 2 & 0 & 0\\
+      3 & 4 & -1 & 5\\
+    \end{bmatrix} \right)= \begin{bmatrix}
+      1 & 0 & 1 & 0 \\
+      0 & 1 & -1 & 0 \\
+      0 & 0 & 0 & 1 \\
+      0 & 0 & 0 & 0
+    \end{bmatrix}
+  \]
+Since the resulting matrix is not the identity matrix, it is not a basis.
+\end{solution}
+
+
+\begin{problem}{S2}
+  Determine if the set \(\left\{
+    \begin{bmatrix} 3 & -1 \\ 2 &3 \end{bmatrix},
+    \begin{bmatrix} 2 & 0 \\ 2 & 4\end{bmatrix},
+    \begin{bmatrix} 1 & 4 \\ -1 & 8\end{bmatrix},
+    \begin{bmatrix} -1 & 3 \\ 0 & 4\end{bmatrix}
+  \right\}\) is a basis of $\IR^{2\times 2}$.
+\end{problem}
+\begin{solution}
+  \[\RREF\left(
+    \begin{bmatrix}
+      3 & 2 & 1 & -1\\
+      -1 & 0 & 4 & 3\\
+      2 & 2 & -1 & 0\\
+      3 & 4 & 8 & 4\\
+    \end{bmatrix} \right)= \begin{bmatrix}
+      1 & 0 & 0 & 0 \\
+      0 & 1 & 0 & 0 \\
+      0 & 0 & 1 & 0 \\
+      0 & 0 & 0 & 1
+    \end{bmatrix}
+  \]
+Since the resulting matrix is the identity matrix, it is a basis.
 \end{solution}
