--- a/assessments/problems/S3.tex
+++ b/assessments/problems/S3.tex
@@ -4,18 +4,18 @@ Let $W = {\rm span} \left( \left\{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix
 \begin{solution}
 $$\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\  0 & 0 & 0 & 0 \end{bmatrix}$$
 
-Then a basis is 
+Then a basis is
 $ \left\{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix} , \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}\right\} $.
 \end{solution}
 
 
 \begin{problem}{S3}
-Let $W$ be the subspace of $\P_3$ given by $W = {\rm span} \left( \left\{ x^3+x^2+2x+1, 3x^3+3x^2+6x+3, 3x^3-x^2+3x-2, 7x^3-x^2+8x-3 \right\} \right)$.  Find a basis for $W$.
+Let $W$ be the subspace of $\P^3$ given by $W = {\rm span} \left( \left\{ x^3+x^2+2x+1, 3x^3+3x^2+6x+3, 3x^3-x^2+3x-2, 7x^3-x^2+8x-3 \right\} \right)$.  Find a basis for $W$.
 \end{problem}
 \begin{solution}
 $$\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\  0 & 0 & 0 & 0 \end{bmatrix}$$
 
-Then a basis is 
+Then a basis is
 $ \left\{ x^3+x^2+2x+1, 3x^3-x^2+3x-2 \right\} $.
 \end{solution}
 
@@ -30,7 +30,7 @@ Since the first two columns are pivot columns, $\left\{ \begin{bmatrix} -3 \\ -8
 
 
 \begin{problem}{S3}
-Let $W$ be the subspace of $\P_2$ given by $W = {\rm span} \left( \left\{  -3x^2-8x, x^2+2x+2, -x+3\right\} \right)$.   Find a basis for $W$.
+Let $W$ be the subspace of $\P^2$ given by $W = {\rm span} \left( \left\{  -3x^2-8x, x^2+2x+2, -x+3\right\} \right)$.   Find a basis for $W$.
 \end{problem}
 \begin{solution}
 Let $A= \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix}$, and compute $\RREF(A) = \begin{bmatrix} 1 & 0 & \frac{1}{2} \\ 0 & 1 & \frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}$.
@@ -38,7 +38,7 @@ Since the first two columns are pivot columns, $\left\{ -3x^2-8x, x^2+2x+2\right
 \end{solution}
 
 
-\begin{problem}{S3}  
+\begin{problem}{S3}
 Let $W={\rm span}\left(\left\{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 1 \\ 3 \\ 6 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix}1 \\ 2 \\ 0 \\ 1 \end{bmatrix}\right\}\right)$.  Find a basis of $W$.
 \end{problem}
 \begin{solution}
@@ -47,10 +47,74 @@ Then $\left\{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 
 \end{solution}
 
 
-\begin{problem}{S3}  
+\begin{problem}{S3}
 Let $W={\rm span}\left( \left\{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 4 \\ -2 \end{bmatrix},  \begin{bmatrix} 1 \\ 1 \\ 1 \\ -7 \end{bmatrix} \right\}\right)$.  Find a basis of $W$.
 \end{problem}
 \begin{solution}
 $$ \RREF \left( \begin{bmatrix} 1 & 2 & 3 & 1 \\ -1 & 0 & -1 & 1 \\ 3 & 1 & 4 & 1 \\ -3 & 1 & -2 & -7 \end{bmatrix} \right) =  \begin{bmatrix} 1 & 0 & 1 & 0 \\ 0 & 1 & 1 & 0 \\ 0 & 0 & 0 & 1 \\ 0 & 0 & 0 & 0\end{bmatrix}$$
-Then  $\left\{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 4 \\ -2 \end{bmatrix},  \begin{bmatrix} 1 \\ 1 \\ 1 \\ -7 \end{bmatrix} \right\}$ is a basis for $W$.
+Then  $\left\{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ 1 \\ 1 \end{bmatrix},   \begin{bmatrix} 1 \\ 1 \\ 1 \\ -7 \end{bmatrix} \right\}$ is a basis for $W$.
+\end{solution}
+
+
+\begin{problem}{S3}
+Let \(
+  W={\rm span}\left\{
+    \begin{bmatrix} 2 & 0 \\ -2 & 0 \end{bmatrix},
+    \begin{bmatrix} 3 & 1 \\ 3 & 6 \end{bmatrix},
+    \begin{bmatrix} 0 & 0 \\ 1 & 1 \end{bmatrix},
+    \begin{bmatrix} 1 & 2 \\ 0 & 1 \end{bmatrix}
+  \right\}
+\). Find a basis for this vector space.
+\end{problem}
+\begin{solution}
+\[
+  \RREF\left(\begin{bmatrix}
+    2 & 3 & 0 & 1 \\
+    0 & 1 & 0 & 2 \\
+    -2 & 3 & 1 & 0 \\
+    0 & 6 & 1 & 1
+  \end{bmatrix} \right) =
+  \begin{bmatrix}
+    1 & 0 & 0 & -\frac{5}{2} \\
+    0 & 1 & 0 & 2 \\
+    0 & 0 & 1 & -11\\
+    0 & 0 & 0 & 0
+  \end{bmatrix}
+\]
+Thus \(\left\{
+  \begin{bmatrix} 2 & 0 \\ -2 & 0 \end{bmatrix},
+  \begin{bmatrix} 3 & 1 \\ 3 & 6 \end{bmatrix},
+  \begin{bmatrix} 0 & 0 \\ 1 & 1 \end{bmatrix}
+\right\}\) is a basis of $W$.
+\end{solution}
+
+
+\begin{problem}{S3}
+Let \(
+  W={\rm span}\left\{
+    \begin{bmatrix} 2 \\ 0 \\ 2 \\ 1 \end{bmatrix},
+    \begin{bmatrix} 3 \\ 1 \\ -1 \\ 1 \end{bmatrix},
+    \begin{bmatrix} 0 \\ 2 \\ -8 \\ 1 \end{bmatrix}
+  \right\}
+\). Find a basis for this vector space.
+\end{problem}
+\begin{solution}
+\[
+  \RREF\left(\begin{bmatrix}
+    2 & 3 & 0 \\
+    0 & 1 & 2 \\
+    2 & -1 & -8 \\
+    1 & 1 & 1
+  \end{bmatrix} \right) =
+  \begin{bmatrix}
+    1 & 0 & -3 \\
+    0 & 1 & 2 \\
+    0 & 0 & 0 \\
+    0 & 0 & 0
+  \end{bmatrix}
+\]
+Thus \(\left\{
+  \begin{bmatrix} 2 \\ 0 \\ 2 \\ 1 \end{bmatrix},
+  \begin{bmatrix} 3 \\ 1 \\ -1 \\ 1 \end{bmatrix}
+\right\}\) is a basis of $W$.
 \end{solution}
