Remove references to M_m,n, closes #60

--- a/modules/4-A/day3.tex
+++ b/modules/4-A/day3.tex
@@ -12,7 +12,7 @@
 \end{activity}
 
 \begin{activity}{15}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).  You have cards containing a number of statements about $T$ and $A$.  Sort them into groups of equivalent statements, and post them on your board.
+Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$ (for the standard basis).  You have cards containing a number of statements about $T$ and $A$.  Sort them into groups of equivalent statements, and post them on your board.
 
 \begin{TBLnote}Card sort activity for 10-15 minutes: cards contain the following
 \begin{enumerate}[(a)]
