--- a/modules/5-M/day1.tex
+++ b/modules/5-M/day1.tex
@@ -32,12 +32,18 @@ Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1
 
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
-\item $M_{4,3}$
-\item $M_{4,2}$
-\item $M_{3,2}$
-\item $M_{2,3}$
-\item $M_{2,4}$
-\item $M_{3,4}$
+\item $4 \times 3$ matrices
+\item $4 \times 2$ matrices
+\item $3 \times 2$ matrices
+\item $2 \times 3$ matrices
+\item $2 \times 4$ matrices
+\item $3 \times 4$ matrices
+%\item $M_{4,3}$
+%\item $M_{4,2}$
+%\item $M_{3,2}$
+%\item $M_{2,3}$
+%\item $M_{2,4}$
+%\item $M_{3,4}$
 \end{enumerate}
 \end{activity}
 
@@ -83,10 +89,14 @@ Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3
 
 The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
-\item $M_{2,2}$
-\item $M_{2,3}$
-\item $M_{3,2}$
-\item $M_{3,3}$
+%\item $M_{2,2}$
+%\item $M_{2,3}$
+%\item $M_{3,2}$
+%\item $M_{3,3}$
+\item $2 \times 2$ matrices
+\item $2 \times 3$ matrices
+\item $3 \times 2$ matrices
+\item $3 \times 3$ matrices
 \end{enumerate}
 \end{activity}
 
@@ -121,7 +131,7 @@ Let $T: \IR^1 \rightarrow \IR^4$ be given by the matrix $B=\begin{bmatrix} 3 \\\
 \end{activity}
 
 \begin{definition}
-We define the product of two matrices $A \in M_{m,n}$ and $B \in M_{n,k}$ to be the matrix $AB \in M_{m,k}$ corresponding to the composition map of the two corresponding linear functions.
+We define the product of a $m \times n$ matrix $A$ and a $n \times k$ matrix $B$ to be the $m \times k$ matrix $AB$ corresponding to the composition map of the two corresponding linear functions.
 \end{definition}
 
 \begin{fact}
