--- a/modules/5-M/day2.tex
+++ b/modules/5-M/day2.tex
@@ -4,15 +4,15 @@
 \begin{applicationActivities}{2}{22}
 
 \begin{activity}{5}
-Find a matrix $I \in M_{4,4}$ such that for any other matrix $A \in M_{4,n}$, $IA=A$.
+Find a $4 \times 4$ matrix $I$ such that, for any $4 \times n$ matrix $A$, $IA=A$.
 \end{activity}
 
 \begin{definition}
-The identity matrix $I_n \in M_{n,n}$ (sometimes written as just $I$ if $n$ is understood) is $$I_n = \begin{bmatrix} 1 & 0  & \hdots & 0 \\ 0 & 1 & \ddots & \vdots  \\ \vdots & \ddots & \ddots & 0 \\ 0 & \hdots & 0 & 1 \end{bmatrix}$$
+The identity matrix $I_n$ (sometimes written as just $I$ if $n$ is understood) is  the $n \times n$ matrix $$I_n = \begin{bmatrix} 1 & 0  & \hdots & 0 \\ 0 & 1 & \ddots & \vdots  \\ \vdots & \ddots & \ddots & 0 \\ 0 & \hdots & 0 & 1 \end{bmatrix}$$
 \end{definition}
 
 \begin{activity}{15}
-Each row operation can be interpreted as a matrix multiplication.  Let $A \in M_{4,4}$
+Each row operation can be interpreted as a matrix multiplication.  Let $A$ be a $4 \times 4$ matrix.
 \begin{enumerate}[1)]
 \item Find a matrix $S_1$ such that $S_1A$ is the result of swapping the second and fourth rows of $A$.
 \item Find a matrix $S_2$ such that $S_2A$ is the result of adding $5$ times the third row of $A$ to the first.
@@ -24,13 +24,13 @@ Each row operation can be interpreted as a matrix multiplication.  Let $A \in M_
 
 
 \begin{activity}{15}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).  Consider the following statements about $T$
+Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$ (for the standard basis).  Consider the following statements about $T$
 \begin{enumerate}[(a)]
 \item $T$ is injective
 \item $T$ is surjective
 \item $T$ is bijective (i.e. both injective and surjective)
-\item $AX=B$ has a solution for all $B \in M_{m,1}$
-\item $AX=B$ has a unique solution for all $B \in M_{m,1}$
+\item $AX=B$ has a solution for all $m \times 1$ matrices $B$
+\item $AX=B$ has a unique solution for all $m \times 1$ matrices $B$
 \item $AX=0$ has a non-trivial solution.
 \item The columns of $A$ span $\IR^m$
 \item The columns of $A$ are linearly independent
@@ -44,37 +44,38 @@ Sort these statements into groups of equivalent statements.
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).
-
-If $T$ is injective, what must be true about how $m$ and $n$ are related?
+Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$.
+If $T$ is injective, which of the following must be true?
 \begin{enumerate}[(a)]
-\item $m<n$
-\item $m \leq n$
-\item $m=n$
-\item $m \geq n$
-\item $m>n$
+\item $A$ has strictly more columns that rows
+\item $A$ has at least as may columns as rows
+\item $A$ is square
+\item $A$ has at least as may rows as columns
+\item $A$ has strictly more rows than columns
 \end{enumerate}
 \end{activity}
 
 \begin{activity}{5}
-If $T$ is surjective, what must be true about how $m$ and $n$ are related?
+Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$.
+If $T$ is surjective, which of the following must be true?
 \begin{enumerate}[(a)]
-\item $m<n$
-\item $m \leq n$
-\item $m=n$
-\item $m \geq n$
-\item $m>n$
+\item $A$ has strictly more columns that rows
+\item $A$ has at least as may columns as rows
+\item $A$ is square
+\item $A$ has at least as may rows as columns
+\item $A$ has strictly more rows than columns
 \end{enumerate}
 \end{activity}
 
 \begin{activity}{5}
-  If $T$ is bijective, what must be true about how $m$ and $n$ are related?
+Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$.
+If $T$ is bijective, which of the following must be true?
 \begin{enumerate}[(a)]
-\item $m<n$
-\item $m \leq n$
-\item $m=n$
-\item $m \geq n$
-\item $m>n$
+\item $A$ has strictly more columns that rows
+\item $A$ has at least as may columns as rows
+\item $A$ is square
+\item $A$ has at least as may rows as columns
+\item $A$ has strictly more rows than columns
 \end{enumerate}
 \end{activity}
 
