--- a/modules/6-G/day1.tex
+++ b/modules/6-G/day1.tex
@@ -45,7 +45,7 @@ For each linear transformation, do the following:
 \end{activity}
 
 \begin{activity}{10}
-Our goal is to define a function $\det:M_n \rightarrow \IR$ that takes a square matrix (linear transformation $\IR^n \rightarrow \IR^n$) and returns its area stretching factor.  This function is called the \term{determinant}.
+Our goal is to define a function $\det$ that takes a square matrix (linear transformation $\IR^n \rightarrow \IR^n$) and returns its area stretching factor.  This function is called the \term{determinant}.
 
 What properties should this function have?
 
