--- a/modules/6-G/day4.tex
+++ b/modules/6-G/day4.tex
@@ -4,7 +4,7 @@
 \begin{applicationActivities}{4}{28}
 
 \begin{activity}{5}
-  If $A \in M_4$, what is the largest number of eigenvalues $A$ can have?
+  If $A$ is a $4 \times 4$ matrix, what is the largest number of eigenvalues $A$ can have?
   \begin{enumerate}[(a)]
   \item $3$
   \item $4$
