--- a/rat/5-m-rat.tex
+++ b/rat/5-m-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `5-m-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/10/02,14:51
+%% Generated on :  2017/10/02,15:40
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/5-M-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -107,7 +107,7 @@ y+z &= c
 \item $T$ is both injective and surjective
 \end{readinessAssuranceTestChoices}
 
-\item Let $T: \IR^n \rightarrow \IR^m$ be a linear transformation with associated matrix $A \in M_{m,n}(\IR)$.  Three of the four answer choices are equivalent to each other; which one is not equivalent to the other three?
+\item Let $T: \IR^n \rightarrow \IR^m$ be a linear transformation with associated matrix $A$.  Three of the four answer choices are equivalent to each other; which one is not equivalent to the other three?
 \begin{readinessAssuranceTestChoices}
 \item $T$ is injective
 \item $T$ has a non-trivial kernel
@@ -115,7 +115,7 @@ y+z &= c
 \item $\RREF(A)$ has a non-pivot column
 \end{readinessAssuranceTestChoices}
 
-\item Let $T: \IR^n \rightarrow \IR^m$ be a linear transformation with associated matrix $A \in M_{m,n}(\IR)$.  Three of the four answer choices are equivalent to each other; which one is not equivalent to the other three?
+\item Let $T: \IR^n \rightarrow \IR^m$ be a linear transformation with associated matrix $A$.  Three of the four answer choices are equivalent to each other; which one is not equivalent to the other three?
 \begin{readinessAssuranceTestChoices}
 \item $T$ is surjective
 \item $\Im T = \IR^m$
