--- a/rat/6-g-rat.tex
+++ b/rat/6-g-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `6-g-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/10/02,14:51
+%% Generated on :  2017/10/02,15:40
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/6-G-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -95,7 +95,7 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-\item Let $T: \IR^n \rightarrow \IR^n$ be a linear transformation with associated matrix $A \in M_n(\IR)$.  Three of the four answer choices are equivalent to each other; which one is not equivalent to the other three?\begin{readinessAssuranceTestChoices}
+\item Let $T: \IR^n \rightarrow \IR^n$ be a linear transformation with associated matrix $A$.  Three of the four answer choices are equivalent to each other; which one is not equivalent to the other three?\begin{readinessAssuranceTestChoices}
 \item $A$ is not an invertible matrix
 \item $T$ has a non-trivial kernel
 \item $\det(A)\neq 0$
