--- a/modules/6-G/readiness.tex
+++ b/modules/6-G/readiness.tex
@@ -101,7 +101,7 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-\item Let $T: \IR^n \rightarrow \IR^n$ be a linear transformation with associated matrix $A \in M_n(\IR)$.  Three of the four answer choices are equivalent to each other; which one is not equivalent to the other three?\begin{readinessAssuranceTestChoices}
+\item Let $T: \IR^n \rightarrow \IR^n$ be a linear transformation with associated matrix $A$.  Three of the four answer choices are equivalent to each other; which one is not equivalent to the other three?\begin{readinessAssuranceTestChoices}
 \item $A$ is not an invertible matrix
 \item $T$ has a non-trivial kernel
 \item $\det(A)\neq 0$
