--- a/modules/3-S/day2.tex
+++ b/modules/3-S/day2.tex
@@ -22,7 +22,7 @@
 
 
 \begin{activity}{15}
-  Which of the following sets are bases for \(\IR^4\)?
+  Which of the following sets are bases for \(\IR^4\)? \\
     \begin{tabular}{cc}
 	\(\left\{
     \begin{bmatrix}1\\0\\0\\0\end{bmatrix},
