--- a/modules/3-S/day3.tex
+++ b/modules/3-S/day3.tex
@@ -36,33 +36,26 @@
 \end{definition}
 
 \begin{activity}{15}
-  Find the dimension of each subspace of \(\IR^4\).
-  \begin{multicols}{3}\small
-  \begin{enumerate}[a)]
-    \item \(\vspan\left\{
+  Find the dimension of each subspace of \(\IR^4\). \\
+	\begin{tabular}{ll}
+     \(\vspan\left\{
     \begin{bmatrix}1\\0\\0\\0\end{bmatrix},
     \begin{bmatrix}0\\1\\0\\0\end{bmatrix},
     \begin{bmatrix}0\\0\\1\\0\end{bmatrix},
     \begin{bmatrix}0\\0\\0\\1\end{bmatrix}
     \right\}
-    \)
+    \) & 
 
-    \item \(\vspan\left\{
+     \(\vspan\left\{
     \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
     \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
     \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
     \begin{bmatrix}-3\\0\\1\\3\end{bmatrix}
     \right\}
-    \)
+    \) \\ 
 
-    \item \(\vspan\left\{
-    \begin{bmatrix}5\\3\\0\\-1\end{bmatrix},
-    \begin{bmatrix}-2\\1\\0\\3\end{bmatrix},
-    \begin{bmatrix}4\\5\\1\\3\end{bmatrix}
-    \right\}
-    \)
-
-    \item \(\vspan\left\{
+ & \\
+     \(\vspan\left\{
     \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
     \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
     \begin{bmatrix}3\\13\\7\\16\end{bmatrix},
@@ -70,16 +63,23 @@
     \begin{bmatrix}4\\3\\0\\2\end{bmatrix}
     \right\}
     \)
-
-    \item \(\vspan\left\{
+ &
+     \(\vspan\left\{
     \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
     \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
     \begin{bmatrix}-3\\0\\1\\3\end{bmatrix},
     \begin{bmatrix}3\\6\\1\\5\end{bmatrix}
     \right\}
-    \)
-  \end{enumerate}
-  \end{multicols}
+    \) \\
+
+ & \\
+     \(\vspan\left\{
+    \begin{bmatrix}5\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}-2\\1\\0\\3\end{bmatrix},
+    \begin{bmatrix}4\\5\\1\\3\end{bmatrix}
+    \right\}
+	\) \\
+\end{tabular}
 \end{activity}
 
 \begin{activity}{5}
