--- a/assessments/problems/A2.tex
+++ b/assessments/problems/A2.tex
@@ -14,14 +14,26 @@ So $T$ is not a linear transformation.
 \end{solution}
 
 \begin{problem}{A2}
-Determine if $D: M_{2,2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = ad-bc$ is a linear transformation or not.
+Determine if $D: \IR^{2\times 2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = ad-bc$ is a linear transformation or not.
 \end{problem}
 \begin{solution}
 $D(I)=1$ but $D(2I)=4 \neq 2D(I)$, so $D$ is not linear.
 \end{solution}
 
 \begin{problem}{A2}
-Determine if the map $T: \P ^4 \rightarrow \P^3$ given by $T(f) = f^{\prime}-f^{\prime \prime}$ is a linear transformation or not.
+Determine if $D: \IR^{2\times 2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = a-3c$ is a linear transformation or not.
+\end{problem}
+
+\begin{problem}{A2}
+Determine if the map $T: \P^6  \rightarrow \P^6$ given by $T(f) = f(x)-f(0)$ is a linear transformation or not.
+\end{problem}
+
+\begin{problem}{A2}
+Determine if the map $T: \P^6  \rightarrow \P^6$ given by $T(f) = xf(x)-f(1)$ is a linear transformation or not.
+\end{problem}
+
+\begin{problem}{A2}
+Determine if the map $T: \P  \rightarrow \P$ given by $T(f) = f^{\prime}-f^{\prime \prime}$ is a linear transformation or not.
 \end{problem}
 
 
