--- a/assessments/problems/A4.tex
+++ b/assessments/problems/A4.tex
@@ -12,6 +12,20 @@ and the image is
 $${\rm Im}(T) = {\rm span} \left( \left\{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix} , \begin{bmatrix} 3 \\ 3 \\ 6 \\ 3 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}, \begin{bmatrix} 7 \\ -1 \\ 8 \\ -3 \end{bmatrix} \right\} \right) = {\rm span} \left( \left\{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix} , \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}\right\} \right)$$
 \end{solution}
 
+\begin{problem}{A4}
+Let $T: \P^3 \rightarrow \P^3$ be the linear transformation given by $$T\left( ax^3+bx^2+cx+d \right)  = (a+3b+3c+7d)x^3 + (a+3b-c-d)x^2+  (2a+6b+3c+8d)x+  (a+3b-2c-3d)$$
+Compute the kernel and image of $T$.
+\end{problem}
+\begin{solution}
+
+$$\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
+
+Then the kernel is
+$$\ker(T) = \left\{ (-3a-b)x^3+  ax^2+ (-2b)x+  b  \big|\ a,b \in \IR\right\} = {\rm span}\left(\left\{ 3x^3 -x^2 , x^3+2x-1 \right\} \right)$$
+and the image is 
+$${\rm Im}(T) = {\rm span} \left( \left\{ x^3+x^2+2x+1, 3x^3+3x^2+6x+3, 3x^3-x^2+3x-2, 7x^3-x^2+8x-3\right\} \right) = {\rm span} \left( \left\{ x^3+x^2+2x+1, 3x^3-x^2+3x-2\right\} \right)$$
+\end{solution}
+
 
 
 \begin{problem}{A4}
