Notation tweaks for consistency

--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -3,6 +3,7 @@
 
 
 \newcommand{\vect}{\mathbf}
+\renewcommand{\vec}{\vect} %SC used \vect while DL used \vec
 
 \newcommand{\circledNumber}[1]{ % https://tex.stackexchange.com/a/7045
 \tikz[baseline=(char.base)]{
