--- a/assessments/problems/S2.tex
+++ b/assessments/problems/S2.tex
@@ -136,7 +136,7 @@ Determine if the set $\left\{
 \begin{bmatrix} -1 & 4 \\ -1 & 1 \end{bmatrix},
 \begin{bmatrix} -1 & 0 \\ 2 & 1 \end{bmatrix},
 \begin{bmatrix} 0 & 3 \\ 3 & 9 \end{bmatrix}
-\right\}$ is a basis of $M_{2,2}$ or not.
+\right\}$ is a basis of $\IR^{2 \times 2}$ or not.
 \end{problem}
 
 \begin{solution}
